# ait

./: LICENSE  README.md
ait-lib/: Cargo.toml  LICENSE  LICENSE_MIT  README.md  TODO.md
ait-lib/src/: embedding.rs  experience.rs  gpt.rs  history.rs  history_wasm.rs  lib.rs  utils.rs
ait-lib/tests/: web.rs
ait-ui/: README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
ait-ui/src/: App.tsx  AppAlert.tsx  AppTitle.tsx  EditContext.tsx  EditResponse.tsx  Experiences.tsx  MarkdownBox.tsx  MessageHistory.tsx  Query.tsx  Settings.tsx  WriteQuery.tsx  defaultHistory.json  default_history.json  main.tsx  theme.tsx  utils.tsx
docs/: index.html
docs/assets/: ait_lib_bg-93899fd3.wasm  ait_lib_bg-f2a65ffb.wasm  index-1e8cbb27.css  index-52fc6b4b.js  index-a6ab583d.js  index-da13e1db.js
