[package]
name = "ait-lib"
version = "0.1.0"
authors = ["Garrin McGoldrick <garrin.mcgoldrick@gmail.com>"]
edition = "2018"
description = "The Ait project"
license = "MIT"
repository = "https://github.com/gmcgoldr/ait"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.63"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde-big-array = "0.4.1"
serde_json = "1.0.93"
tap = "1.0.1"
thiserror = "1.0.38"
reqwest = { version = "0.11.14", features = ["json"] }
serde_with = "2.2.0"
sha2 = "0.10.6"
web-sys = { version = "0.3.61", features = ["Storage", "Window", "console"] }
base64 = "0.21.0"
js-sys = "0.3.61"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
serde-wasm-bindgen = "0.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
